syntax = "proto3";

package dev.verrai.client.service.proto;

option java_package = "dev.verrai.client.service.proto";

message DiscoveryPacket {
    enum Type {
        ANNOUNCE = 0;
        HEARTBEAT = 1;
        BYE = 2;
    }
    Type type = 1;
    string nodeId = 2;
    repeated string serviceIds = 3;
}
